(SIMP-2111) Incorrect Changelog Entry
When pulling the changes from master into 5.X, discovered that there was an incorrect changelog entry present which would cause the builds to fail on some systems.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.3-0
+* Mon 21 Nov 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.3-0
 - Updated to compliance_markup version 2
 
 * Thu 29 Sep 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.2-0
