Added in changelog update

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed 21 Dec 2016 Nick Markowski <nmarkowski@keywcorp.com> - 0.4.0-0
+- Updated global catalysts
+
 * Mon 21 Nov 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.3-0
 - Updated to compliance_markup version 2
 
