--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Thu Jul 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.3-0
+- Fix bad 0.4.2 tag.  In that tag, the metadata.json was incorrect.
+
 * Thu Jul 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.2-0
 - Fix bad tag.  simp-0.4.1 tag was made off of master branch.
 
