(SIMP-4009) Add support for OEL and Puppet5
* Added tests for Puppet 5
* Added support for OEL 6 and 7

SIMP-4009 #comment Added support for Puppet 5 and OEL 6 & 7

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* Thu Mar 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.5-0
+- Add support for OracleLinux 6 and 7
+- Test against Puppet 5
+
 * Thu Aug 17 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.4-0
 - Update the README with the new badges and improve formatting
 
