--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed May 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.8-0
+- Maintenance: removed OBE build/rpm_metadata/requires
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.7-0
 - Update the upper bound of stdlib to < 6.0.0
 
