--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Mon Dec 16 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.6.0-0
+- Add EL 8 support
+
 * Fri Aug 02 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.5.0-0
 - Remove Puppet 4 support
 - Add Puppet 6 support
