--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.6.1
+- Removed EL6 support
+
 * Mon Dec 16 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.6.0-0
 - Add EL 8 support
 
