--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed Jun 23 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.8.0
+- Updated the README
+
 * Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.8.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
