--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.12.0
+- Add RockyLinux 8 support
+
 * Sun Dec 18 2022 Trevor Vaughan <trevor@sicura.us> - 0.11.0
 - Added:
   - The module now supports Alma Linux 8 and Rocky Linux 8
